2008-11-12  Dirk Schulze  <vbs85@gmx.de>

WebCore:

        Reviewed Darin Adler.

        use strokeColor.alpha() instead of fillColor.alpha()
        on GraphicsContext::strokePath()

        [Canvas] Transparent fillStyle stops line rendering
        https://bugs.webkit.org/show_bug.cgi?id=21888

        Test: fast/canvas/canvas-stroke-empty-fill.html

        * ChangeLog:
        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::strokePath):

LayoutTests:

        Reviewed by Darin Adler.

        Check behavior of canvas.stroke() on transparent fillStyle()

        * fast/canvas/canvas-stroke-empty-fill-expected.txt: Added.
        * fast/canvas/canvas-stroke-empty-fill.html: Added.
        * fast/canvas/canvas-stroke-empty-fill.js: Added.


Canonical link: https://commits.webkit.org/30578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38364 268f45cc-cd09-0410-ab3c-d52691b4dbfc